# xf86-input-itrack

./: .gitignore  DEBUG.md  Makefile.am  Makefile.in  README.md  autogen.sh  build.md  configure.ac  todo  xf86-itrack.pc  xf86-itrack.pc.in
man/: Makefile.in  itrack.man
src/: button-axle.c  button-axle.h  capabilities.c  capabilities.h  common.c  common.h  debug.c  debug.h  hwstate.c  hwstate.h  itrack-config.c  itrack-config.h  itrack-main.c  itrack-main.h  itrack-type.h  itrack.c  itrack.h  itrack_label.c  itrack_label.h  mconfig.c  mconfig.h  mprops.c  mprops.h  mtstate.c  mtstate.h  post-stage.c  post-stage.h  touch-handler.c  touch-handler.h  truck.c  xconfig.c  xconfig.h
src/guesture/: drag.c  drag.h  guesture.c  guesture.h  guesture_manager.c  guesture_manager.h  move.c  move.h  pinch.c  pinch.h  rotate.c  rotate.h  scroll.c  scroll.h  tap.c  tap.h  type.h
src/post_stage/: movement.c  movement.h
src/public/: touch.h
test/: main.c  simu_test.c  simu_test.h  test_move.c  test_move.h  test_tap.c  test_tap.h
